--- a/demo_springboot/src/main/resources/application.properties
+++ b/demo_springboot/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=student
+spring.datasource.username=reenu
+spring.datasource.password=reenu@123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
